# aoc-2022

./: .gitignore  README.md  pyproject.toml
src/aoc2022/: __init__.py  __main__.py
src/aoc2022/solutions/: __init__.py  day1.py  day2.py
src/aoc2022/solutions/day1/: part1.py  part2.py
src/aoc2022/solutions/day2/: __init__.py  part1.py  part2.py
src/aoc2022/solutions/day3/: __init__.py  part1.py  part2.py
src/aoc2022/solutions/day4/: __init__.py  part1.py  part2.py
src/aoc2022/solutions/day5/: __init__.py  part1.py  part2.py
src/aoc2022/solutions/day6/: __init__.py  part1.py  part2.py
